src/styles/globals.css
:root {
	--background: #ffffff;
	--foreground: #171717;
	--button-padding: 1.5vh 1.1vh;
	--button-font-size: 2.5vh;
	--button-border-radius: 4vh;
	--button-transition: all 300ms ease-in-out;
	--primary-bg: #3c47ba;
	--secondary-bg: rgb(207, 207, 223);
	--hover-bg: rgb(6, 6, 63);
	--text-color: rgb(255, 255, 255);
	--hover-text-color: rgb(255, 255, 255);
}

@media (prefers-color-scheme: dark) {
	:root {
		--background: #0a0a0a;
		--foreground: #ededed;
	}
}

html {
	scroll-behavior: smooth;
	scroll-snap-type: y mandatory;
	overflow-x: hidden;
}

body {
	color: var(--foreground);
	background: var(--background);
	font-family: Arial, Helvetica, sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	margin: 0;
	overflow-y: auto;
}

* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

a {
	color: inherit;
	text-decoration: none;
}

@media (prefers-color-scheme: dark) {
	html {
		color-scheme: dark;
	}
}

